# SimpleRPG-on-DE1SoC-ECE243FinalProject

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  const.h  font5x7.h  globals.h  main.c  paint_functions.c  paint_functions.h  proj.amp  ps2.c  utils.c  utils.h
src/anime/: anime_player.h
src/game_contents/: farmer.h  game_contents.h  hex_display.h  monster.h  player.h  resources.h  servant.h  tilesets.h  weapon.h
src/game_contents/scenes/: basement_scene.h  hallway_scene.h  initial_scene.h  ruins_scene.h  scenes_globals.h  template_scene.h  village1_scene.h  village2_scene.h
src/game_server/: actor.h  dialog.h  game_server.h  interact_point.h  scene.h
src/images/: CMakeLists.txt  image_slice.c  image_slice.h  short_image.c  short_image.h
src/input_server/: input_server.h  input_server_ps2.h  input_server_sdl.h  scan_code.h
src/screen_server/: CMakeLists.txt  screen_server.c  screen_server.h  screen_server_sdl.c  screen_server_sdl.h  screen_server_vga.c  screen_server_vga.h
src/text/: textbox.h
src/tilemap/: CMakeLists.txt  tilemap.c  tilemap.h  tileset.c  tileset.h
utils/: img_convert.py  main set.tsx  resources.h  solid_map_convert.py  string_warp.py
